Sample/Manual/libvlc.cs


        protected int __PointerAdjustment;
        internal static readonly global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::libvlcsharp.Log> NativeToManagedMap = new global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::libvlcsharp.Log>();
        protected void*[] __OriginalVTables;

        protected bool __ownsNativeInstance;

        internal static global::libvlcsharp.Log __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new global::libvlcsharp.Log(native.ToPointer(), skipVTables);
        }

        internal static global::libvlcsharp.Log __CreateInstance(global::libvlcsharp.Log.__Internal native, bool skipVTables = false)
        {
            return new global::libvlcsharp.Log(native, skipVTables);
        }

        private static void* __CopyValue(global::libvlcsharp.Log.__Internal native)
        {
            var ret = Marshal.AllocHGlobal(sizeof(global::libvlcsharp.Log.__Internal));
            *(global::libvlcsharp.Log.__Internal*) ret = native;
            return ret.ToPointer();
        }

        private Log(global::libvlcsharp.Log.__Internal native, bool skipVTables = false)
            : this(__CopyValue(native), skipVTables)
        {
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        protected Log(void* native, bool skipVTables = false)
        {
            if (native == null)
                return;
            __Instance = new global::System.IntPtr(native);
        }
    }

    /// <summary>Description of a module.</summary>
    public unsafe partial class ModuleDescription : IDisposable
    {
        //[StructLayout(LayoutKind.Explicit, Size = 40)]
        [StructLayout(LayoutKind.Sequential)]
        public partial struct Internal
        {
            //[FieldOffset(0)]
            //[MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(Utf8StringMarshaler))]
            internal IntPtr psz_name;

            //[FieldOffset(8)]
            //[MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(Utf8StringMarshaler))]
            internal IntPtr psz_shortname;

            //[FieldOffset(16)]
            //[MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(Utf8StringMarshaler))]
            internal IntPtr psz_longname;

            //[FieldOffset(24)]
            //[MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(Utf8StringMarshaler))]
            internal IntPtr psz_help;

            //[FieldOffset(32)]
            //[MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(Utf8StringMarshaler))]
            internal IntPtr p_next;

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="??0libvlc_module_description_t@@QEAA@AEBU0@@Z")]
            internal static extern global::System.IntPtr cctor(global::System.IntPtr instance, global::System.IntPtr _0);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = CallingConvention.Cdecl,
                EntryPoint = "libvlc_module_description_list_release")]
            internal static extern void LibVLCModuleDescriptionListRelease(IntPtr moduleDescriptionList);
        }

        public IntPtr NativeReference { get; protected set; }

        protected int __PointerAdjustment;
        internal static readonly global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::libvlcsharp.ModuleDescription> NativeToManagedMap = new global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::libvlcsharp.ModuleDescription>();
        protected void*[] __OriginalVTables;

        protected bool __ownsNativeInstance;

        internal static global::libvlcsharp.ModuleDescription __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new global::libvlcsharp.ModuleDescription(native.ToPointer(), skipVTables);
        }

        internal static global::libvlcsharp.ModuleDescription __CreateInstance(global::libvlcsharp.ModuleDescription.Internal native, bool skipVTables = false)
        {
            return new global::libvlcsharp.ModuleDescription(native, skipVTables);
        }

        private static void* __CopyValue(global::libvlcsharp.ModuleDescription.Internal native)
        {
            var ret = Marshal.AllocHGlobal(sizeof(global::libvlcsharp.ModuleDescription.Internal));
            *(global::libvlcsharp.ModuleDescription.Internal*) ret = native;
            return ret.ToPointer();
        }

        private ModuleDescription(global::libvlcsharp.ModuleDescription.Internal native, bool skipVTables = false)
            : this(__CopyValue(native), skipVTables)
        {
            __ownsNativeInstance = true;
            NativeToManagedMap[NativeReference] = this;
        }

        private void ModuleDescriptionListRelease()
        {
            Internal.LibVLCModuleDescriptionListRelease(NativeReference);
        }

        protected ModuleDescription(void* native, bool skipVTables = false)
        {
            if (native == null)
                return;
            NativeReference = new global::System.IntPtr(native);
        }

        public ModuleDescription()
        {
            NativeReference = Marshal.AllocHGlobal(sizeof(global::libvlcsharp.ModuleDescription.Internal));
            __ownsNativeInstance = true;
            NativeToManagedMap[NativeReference] = this;
        }

        public ModuleDescription(global::libvlcsharp.ModuleDescription _0)
        {
            NativeReference = Marshal.AllocHGlobal(sizeof(global::libvlcsharp.ModuleDescription.Internal));
            __ownsNativeInstance = true;
            NativeToManagedMap[NativeReference] = this;
            *((global::libvlcsharp.ModuleDescription.Internal*) NativeReference) = *((global::libvlcsharp.ModuleDescription.Internal*) _0.NativeReference);
        }

        public void Dispose()
        {
            Dispose(disposing: true);
        }

        public virtual void Dispose(bool disposing)
        {
            if (NativeReference == IntPtr.Zero)
                return;


            NativeToManagedMap.TryRemove(NativeReference, out var dummy);

            ModuleDescriptionListRelease();

            NativeReference = IntPtr.Zero;
        }

        public sbyte* PszName
        {
            get
            {
                return (sbyte*)((global::libvlcsharp.ModuleDescription.Internal*)NativeReference)->psz_name;
            }

            set
            {
                ((global::libvlcsharp.ModuleDescription.Internal*) NativeReference)->psz_name = (global::System.IntPtr) value;
            }
        }

        public string Name => new String(PszName);

        public sbyte* PszShortname
        {
            get
            {
                return (sbyte*) ((global::libvlcsharp.ModuleDescription.Internal*) NativeReference)->psz_shortname;
            }

            set
            {
                ((global::libvlcsharp.ModuleDescription.Internal*) NativeReference)->psz_shortname = (global::System.IntPtr) value;
            }
        }

        public sbyte* PszLongname
        {
            get
            {
                return (sbyte*) ((global::libvlcsharp.ModuleDescription.Internal*) NativeReference)->psz_longname;
            }

            set
            {
                ((global::libvlcsharp.ModuleDescription.Internal*) NativeReference)->psz_longname = (global::System.IntPtr) value;
            }
        }

        public sbyte* PszHelp
        {
            get
            {
                return (sbyte*) ((global::libvlcsharp.ModuleDescription.Internal*) NativeReference)->psz_help;
            }

            set
            {
                ((global::libvlcsharp.ModuleDescription.Internal*) NativeReference)->psz_help = (global::System.IntPtr) value;
            }
        }

        public global::libvlcsharp.ModuleDescription PNext
        {
            get
            {
                global::libvlcsharp.ModuleDescription __result0;
                //Internal.
                if (((global::libvlcsharp.ModuleDescription.Internal*)NativeReference)->p_next == IntPtr.Zero) __result0 = null;
                else if (NativeToManagedMap.ContainsKey(((Internal*) NativeReference)->p_next))
                    __result0 = NativeToManagedMap[((Internal*) NativeReference)->p_next];
                else __result0 = __CreateInstance(((Internal*) NativeReference)->p_next);
                return __result0;
            }

            set
            {
                ((global::libvlcsharp.ModuleDescription.Internal*) NativeReference)->p_next = ReferenceEquals(value, null) ? global::System.IntPtr.Zero : value.NativeReference;
            }
        }
    }

    public unsafe partial class libvlc
    {
        public partial struct __Internal
        {
            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_errmsg")]
            internal static extern global::System.IntPtr LibvlcErrmsg();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_clearerr")]
            internal static extern void LibvlcClearerr();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_printerr")]
            internal static extern global::System.IntPtr LibvlcPrinterr([MarshalAs(UnmanagedType.LPStr)] string fmt);

            

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_retain")]
            internal static extern void LibvlcRetain(global::System.IntPtr p_instance);

           
            
          
          
            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_get_version")]
            internal static extern global::System.IntPtr LibvlcGetVersion();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_get_compiler")]
            internal static extern global::System.IntPtr LibvlcGetCompiler();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_get_changeset")]
            internal static extern global::System.IntPtr LibvlcGetChangeset();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_free")]
            internal static extern void LibvlcFree(global::System.IntPtr ptr);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libvlc", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="libvlc_event_attach")]
            internal static extern int LibvlcEventAttach(global::System.IntPtr p_event_manager, int i_event_type, global::System.IntPtr f_callback, global::System.IntPtr user_data);
